# auto_ssh_setup

./: .gitignore  LICENSE  pyproject.toml  readme.md  script.py
